terraform/aws-centos/kubernetes/role_security_group.tf.template
{{/* vim: set ft=tf: */}}
resource "aws_security_group" "{{.TFName}}" {
  name   = "${data.template_file.stack_name.rendered}-{{.DNSName}}"
  vpc_id = "${data.terraform_remote_state.network.vpc_id}"

  tags {
    Name        = "${data.template_file.stack_name.rendered}-{{.DNSName}}"
    Environment = "${var.environment}"
    Project     = "${var.project}"
    Contact     = "${var.contact}"
  }
}

resource "aws_security_group" "{{.TFName}}_elb" {
  name   = "${data.template_file.stack_name.rendered}-{{.DNSName}}-elb"
  vpc_id = "${data.terraform_remote_state.network.vpc_id}"

  tags {
    Name        = "${data.template_file.stack_name.rendered}-{{.DNSName}}-elb"
    Environment = "${var.environment}"
    Project     = "${var.project}"
    Contact     = "${var.contact}"
  }
}

resource "aws_security_group_rule" "{{.TFName}}_allow_ssh_CI" {
  type                     = "ingress"
  from_port                = 22
  to_port                  = 22
  protocol                 = "tcp"
  source_security_group_id = "${data.terraform_remote_state.hub_tools.jenkins_security_group_id}"
  security_group_id        = "${aws_security_group.{{.TFName}}.id}"
}

resource "aws_security_group_rule" "{{.TFName}}_allow_bgp_{{.TFName}}" {
  type                     = "ingress"
  from_port                = 0
  to_port                  = 0
  protocol                 = "-1"
  source_security_group_id = "${aws_security_group.{{.TFName}}.id}"
  security_group_id        = "${aws_security_group.{{.TFName}}.id}"
}

resource "aws_security_group_rule" "{{.TFName}}_allow_bgp_kubernetes_worker" {
  type                     = "ingress"
  from_port                = 0
  to_port                  = 0
  protocol                 = "-1"
  source_security_group_id = "${aws_security_group.kubernetes_worker.id}"
  security_group_id        = "${aws_security_group.{{.TFName}}.id}"
}

resource "aws_security_group_rule" "{{.TFName}}_elb_allow_6443_worker" {
  type                     = "ingress"
  from_port                = 6443
  to_port                  = 6443
  protocol                 = "tcp"
  source_security_group_id = "${aws_security_group.kubernetes_worker.id}"
  security_group_id        = "${aws_security_group.{{.TFName}}_elb.id}"
}

resource "aws_security_group_rule" "{{.TFName}}_elb_allow_6443_master" {
  type                     = "ingress"
  from_port                = 6443
  to_port                  = 6443
  protocol                 = "tcp"
  source_security_group_id = "${aws_security_group.{{.TFName}}.id}"
  security_group_id        = "${aws_security_group.{{.TFName}}_elb.id}"
}

resource "aws_security_group_rule" "{{.TFName}}_elb_allow_6443_bastion" {
  type                     = "ingress"
  from_port                = 6443
  to_port                  = 6443
  protocol                 = "tcp"
  source_security_group_id = "${data.terraform_remote_state.hub_tools.bastion_security_group_id}"
  security_group_id        = "${aws_security_group.{{.TFName}}_elb.id}"
}

resource "aws_security_group_rule" "{{.TFName}}_elb_allow_6443_CI" {
  type                     = "ingress"
  from_port                = 6443
  to_port                  = 6443
  protocol                 = "tcp"
  source_security_group_id = "${data.terraform_remote_state.hub_tools.jenkins_security_group_id}"
  security_group_id        = "${aws_security_group.{{.TFName}}_elb.id}"
}

resource "aws_security_group_rule" "{{.TFName}}_allow_6443_{{.TFName}}_elb" {
  type                     = "ingress"
  from_port                = 6443
  to_port                  = 6443
  protocol                 = "tcp"
  source_security_group_id = "${aws_security_group.{{.TFName}}_elb.id}"
  security_group_id        = "${aws_security_group.{{.TFName}}.id}"
}

resource "aws_security_group_rule" "{{.TFName}}_allow_6443_egress_{{.TFName}}_elb" {
  type                     = "egress"
  from_port                = 6443
  to_port                  = 6443
  protocol                 = "tcp"
  source_security_group_id = "${aws_security_group.{{.TFName}}.id}"
  security_group_id        = "${aws_security_group.{{.TFName}}_elb.id}"
}

resource "aws_security_group_rule" "{{.TFName}}_allow_egress" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = "${aws_security_group.{{.TFName}}.id}"
}
